@@ -32,6 +32,7 @@
 - Fixed: Need to add "SMTP:" to the 'emailTo' address for (S)MAPI (issue 140).
 - Fixed: HTTPS certificate problem (issue 151)
 - Fixed: Resource leak in CrashRpt (issue 160)
+- Fixed: HttpEndRequest() fails. GetLastError() = ERROR_INTERNET_TIMEOUT (12002) (issue 138)
 
 
 --- Ver. 1.3.0 ---
